<resources>
    <string name="app_name">FoxMaths</string>
    <string name="reglage">Réglages</string>
    <string name="langue">Langue</string>
    <string name="musique">Musique</string>
    <string name="fond">Musique de fond</string>
    <string name="start">Démarrer le jeu</string>
    <string name="bruitage">Bruitages</string>
    <string name="credit">Crédits</string>
    <string name="signInText2">Connecte toi et défis d\'autres utilisateurs !</string>
    <string name="singInTitle">Connexion</string>
    <string name="hintPassword">Mot de passe</string>
    <string name="mailHint">Mail address</string>
    <string name="logInBtn">Se Connecter</string>
    <string name="hintUser">Nom d\'utilisateur</string>
    <string name="toSignUp">Créer un compte</string>
    <string name="novice">Novice</string>
    <string name="beginner">Débutant</string>
    <string name="intermediary">Intermédiraire</string>
    <string name="advanced">Avancé</string>
    <string name="confirmed">Confirmé</string>
    <string name="expert">Expert</string>
    <string name="replay">Rejouer !</string>





    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="height">8</string>
    <string name="nine">9</string>
    <string name="minus">−</string>
    <string name="division">/</string>
    <string name="delall">C</string>
    <string name="del">⌫</string>
    <string name="comma">,</string>
    <string name="dot">.</string>
    <string name="title_activity_settings">activity_settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hintconfirmPassword">Confirmer le mot de passe</string>
    <string name="signInBtn">S\'inscrire</string>
    <string name="toLogIn">Avez vous un compte?</string>
    <string name="signUpTitle">Inscription</string>
    <string name="classicmode">Mode Classique</string>
    <string name="skip">skip</string>
    <string name="startgame">Démarrer le jeu</string>
    <string name="dailymode">Calcul du jour</string>
    <string name="developed">Développé par le Groupe 6</string>
    <string name="stats">Statistiques</string>
    <string name="classement_text">Classement de l\'utilisateur</string>
    <string name="adventuremode">Mode Aventure</string>
    <string name="multimode">Mode Multijoueur</string>

    <string name="classic_popup">"Ce mode vous permet de tester vos capacité en calcul mental et de les améliorer. Chaque bonne réponse apporte 10 points et les mauvaises -5points. Les équations contenant des fractions attendent une réponse sous forme de fraction"</string>
    <string name="adventure_popup">"Dans ce mode, vous devez mener votre renard le plus loin possible en répondant correctement aux equations proposées. Vous disposez de 20secondes pour répondre. Si votre réponse est bonne, le course continue, sinon vous perdez une vie. Le jeu s'arrête lorsque vous perdez 3 vies"</string>
    <string name="multi_popup">"Ce mini jeu est une version multijoueur du mode aventure. La partie s'arrête lorsque l'un des 2 joueurs a perdu toutes ses vies. Le joueur ayant répondu au plus d'équations correctement sera le gagnant"</string>





</resources>