<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_marginTop="-80dp"
        android:background="@drawable/box"
        android:maxWidth="24dp"
        android:maxHeight="24dp"
        android:scaleType="fitCenter"
       />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli_extrabold"
        android:gravity="center"
        android:text="@string/singInTitle"
        android:textColor="@color/white"
        android:textSize="36dp" />


    <TextView
        android:id="@+id/signInText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInText"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/muli_extrabold"
        android:gravity="center"
        android:text="@string/signInText2"
        android:textColor="@color/purplemenu"
        android:textSize="25dp" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/logInBtn"
        android:layout_width="188dp"
        android:layout_height="70dp"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:backgroundTint="@color/orangemenu"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/logInBtn" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@id/userField"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintPassword"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/userField"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@+id/signInText2"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/hintUser"/>

    <Button
        android:id="@+id/toSignUp"
        android:layout_width="188dp"
        android:layout_height="70dp"
        android:layout_below="@+id/logInBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/toSignUp" />

    <TextView
        android:id="@+id/userMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordField"
        android:text="" />


</RelativeLayout>