<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="322dp"
        android:layout_marginHorizontal="30dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/two"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/three"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/buttonclear"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orangebutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="288dp">

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/four"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/five"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/six"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/buttonclearall"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orangebutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/delall"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="288dp">

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/seven"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/height"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/nine"
                android:textSize="30dp" />


            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/buttonc"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orangebutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="111dp">

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/buttoncomma"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/comma"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/buttondot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/comma"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/buttonenter"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordField"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/orangebutton"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:focusedByDefault="true"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>